# Marine-Litter-Detection-Backend

./: Dockerfile  README.md  best.pt  docker-compose.yaml  functions.py  main.py  pyproject.toml
